  QColorDialog::setCustomColor() and QColorDialog::setStandardColor() now
  take a QColor value for their second parameter instead of QRgb.

- QPageSetupDialog has had the PageSetupDialogOption enum and the api to
  set and get the enum removed as none of the Options are used any more.

- QAbstractPageSetupDialog has been removed.

****************************************************************************
*                           General                                        *
****************************************************************************

General Improvements
--------------------

- The directory structure of the qtbase unit-tests has been reworked to
  more closely match the directory structure of the code under test.
  Integration tests have been moved to tests/auto/integrationtests.

- Qt is compiled with C++11 support enabled by default, provided the compiler
  supports C++11. Qmake based projects can enable C++11 support explicitly
  using 'CONFIG+=c++11' in their .pro files. To enable it conditionally, use
  'contains(QT_CONFIG,c++11):CONFIG+=c++11'. This will enable C++11 support
  only if Qt was built with C++11 support.

- The Unicode Data and Algorithms has been updated to match the
  Unicode Standard of version 6.2. For more information see http://www.unicode.org/

Third party components
----------------------

- SQLITE_ENABLE_FTS3,SQLITE_ENABLE_FTS3_PARENTHESIS and SQLITE_ENABLE_RTREE
flags are now enabled by default on all platforms, for the sqlite3 copy under
the 3rdparty directory.


****************************************************************************
*                          Library                                         *
****************************************************************************

QtCore
------
* [QTBUG-12144], [QTBUG-18360] The QChar methods are now able to handle the full range
  of Unicode codepoints defined by the Unicode Standard of version 6.2.