@@ -147,7 +147,6 @@ public:
 
     bool running;
     bool finished;
-    bool terminated;
     bool isInFinish; //when in QThreadPrivate::finish
 
     bool exited;
